update: video output

--- a/MobileNetV3_large.ipynb
+++ b/MobileNetV3_large.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available():\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import os\n",
@@ -602,11 +614,92 @@
    "source": [
     "torch.save(model, '/home/i-hsuan/mb/model.pth')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import torch\n",
+    "from torchvision import transforms\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "\n",
+    "# 定義裝置\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# 定義與訓練一致的數據變換\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize(256),\n",
+    "    transforms.CenterCrop(224),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+    "])\n",
+    "\n",
+    "# 加載情緒分類模型\n",
+    "model = torch.load(\"MobileNetV3_large_val_acc_0.69.pth\", map_location=device)\n",
+    "model = model.to(device)\n",
+    "model.eval()\n",
+    "\n",
+    "# 定義狗狗情緒類別\n",
+    "class_names = [\"angry\", \"happy\", \"relax\", \"sad\"]\n",
+    "\n",
+    "# 打開影片文件\n",
+    "video_path = \"dog_video.mp4\"  # 替換為你的影片路徑\n",
+    "cap = cv2.VideoCapture(video_path)\n",
+    "\n",
+    "if not cap.isOpened():\n",
+    "    print(\"Error: Cannot open video file.\")\n",
+    "    exit()\n",
+    "\n",
+    "# 定義縮放比例（如 50% 大小）\n",
+    "scale_percent = 50\n",
+    "\n",
+    "# 處理影片每一幀\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()  # 獲取影片幀\n",
+    "    if not ret:\n",
+    "        break  # 若影片結束，退出循環\n",
+    "\n",
+    "    # 縮小畫面\n",
+    "    width = int(frame.shape[1] * scale_percent / 100)\n",
+    "    height = int(frame.shape[0] * scale_percent / 100)\n",
+    "    resized_frame = cv2.resize(frame, (width, height), interpolation=cv2.INTER_AREA)\n",
+    "\n",
+    "    # 將縮小後的圖像轉為 PIL 圖像\n",
+    "    pil_image = Image.fromarray(cv2.cvtColor(resized_frame, cv2.COLOR_BGR2RGB))\n",
+    "\n",
+    "    # 預處理圖像\n",
+    "    input_tensor = transform(pil_image).unsqueeze(0).to(device)\n",
+    "\n",
+    "    # 進行情緒推理\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(input_tensor)\n",
+    "        _, predicted = torch.max(outputs, 1)\n",
+    "        predicted_class = class_names[predicted.item()]\n",
+    "\n",
+    "    # 在縮小畫面上顯示預測類別\n",
+    "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "    cv2.putText(resized_frame, f\"Emotion: {predicted_class}\", (10, 30), font, 1, (0, 255, 0), 2, cv2.LINE_AA)\n",
+    "\n",
+    "    # 顯示處理後的縮小畫面\n",
+    "    cv2.imshow(\"Dog Emotion Detection\", resized_frame)\n",
+    "\n",
+    "    # 按下 'q' 鍵退出\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "# 釋放資源\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mb",
+   "display_name": "ML_project",
    "language": "python",
    "name": "python3"
   },
@@ -620,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
